--- a/Fuente/LabSecMobile/app/src/main/res/layout/activity_labs_list.xml
+++ b/Fuente/LabSecMobile/app/src/main/res/layout/activity_labs_list.xml
@@ -28,7 +28,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
             android:focusable="true"
@@ -40,7 +39,7 @@
             android:id="@+id/tvLabsListNoLabs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No hay laboratoios registrados"
+            android:text="@string/no_labs"
             android:textSize="20sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
