--- a/Fuente/LabSecMobile/app/src/main/res/layout/activity_device_list.xml
+++ b/Fuente/LabSecMobile/app/src/main/res/layout/activity_device_list.xml
@@ -11,11 +11,10 @@
         tools:context=".DeviceListActivity">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/fabDeviceList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             android:focusable="true"
             android:clickable="true"
@@ -37,7 +36,7 @@
             android:id="@+id/tvDeviceListNoDevices"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No hay dispositivos registrados"
+            android:text="@string/no_devices"
             android:textSize="20sp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
